hphp/hack/test/typecheck/nonnull/switch_on_nonnull.php.exp
File "switch_on_nonnull.php", line 5, characters 10-11:
Typing error (Typing[4110])
File "switch_on_nonnull.php", line 3, characters 12-18:
This is a nonnull value
File "switch_on_nonnull.php", line 5, characters 10-11:
It is incompatible with an int
